--- a/lib/styles/components/inputs.scss
+++ b/lib/styles/components/inputs.scss
@@ -88,26 +88,65 @@
 }
 
 @mixin checkbox(
-  $checkbox-class: 'checkbox'
+  $checkbox-class: 'checkbox',
+  $checkbox-button-size: 2em
 ) {
   .#{$checkbox-class} {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 50;
+    @include reset-input;
     cursor: pointer;
 
     &__container {
       position: relative;
       cursor: pointer;
+    }
 
-      .input__label {
-        position: static;
+    &__label {
+      position: static;
+      cursor: pointer;
+      padding-right: 1em;
+      display: flex;
+      align-items: center;
+
+      &:before {
+        content: '';
+        background: transparent;
+        border: 1px solid color('white', 0.7);
+        display: inline-block;
+        width: $checkbox-button-size;
+        height: $checkbox-button-size;
+        margin-right: 1em;
+        vertical-align: top;
         cursor: pointer;
-        padding-left: 25px;
-        margin: 0;
+        transition: all 250ms ease;
+      }
+    }
+
+    &:checked {
+      + .#{$checkbox-class}__label {
+        color: color('white');
+        &:before {
+          background-color: color('sea-green');
+          box-shadow: inset 0 0 0 4px color('navy-taupe');
+        }
+      }
+    }
+
+    &:focus, &:hover {
+      + .#{$checkbox-class}__label {
+        &:before {
+          outline: none;
+          border-color: color('sea-green');
+        }
+      }
+    }
+
+    &:disabled {
+      + .#{$checkbox-class}__label {
+        &:before {
+          box-shadow: inset 0 0 0 4px color('white');
+          border-color: color('white', 0.7);
+          background: color('white', 0.7);
+        }
       }
     }
   }
@@ -115,7 +154,7 @@
 
 @mixin radio(
   $radio-class: 'radio',
-  $radio-button-size: 1.5em
+  $radio-button-size: 2em
 ) {
   .#{$radio-class} {
     @include reset-input;
@@ -126,6 +165,9 @@
     }
 
     &__label {
+      display: flex;
+      align-items: center;
+      padding-right: 1em;
       color: color('white', 0.7);
       &:before {
         content: '';
@@ -152,7 +194,7 @@
       }
     }
 
-    &:focus {
+    &:focus, &:hover {
       + .#{$radio-class}__label {
         &:before {
           outline: none;
@@ -175,8 +217,8 @@
 
 @mixin toggle(
   $toggle-class: 'toggle',
-  $toggle-height: 1.5em,
-  $switch-size: 1.5em
+  $toggle-height: 2em,
+  $switch-size: 2em
 ) {
   .#{$toggle-class} {
     @include reset-input;
@@ -190,7 +232,7 @@
 
     &__container {
       position: relative;
-
+      padding-right: 1em;
       .input__label {
         position: static;
         cursor: pointer;
@@ -238,7 +280,7 @@
       }
 
       &:before {
-        transform: translateX(26px);
+        transform: translateX($switch-size * 1.5);
       }
     }
   }
@@ -256,6 +298,7 @@
       position: relative;
       min-height: 100px;
       min-width: 100px;
+      margin-right: 1.5em;
 
       .input__label {
         position: static;
