--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -46,6 +46,10 @@
     flex-wrap: nowrap;
   }
 
+  &--inactive {
+    opacity: .5;
+  }
+
   &--selected {
     .node__node-trim {
       stroke: palette('selected');
