--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -40,10 +40,17 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
+    padding: 33%;
+
+    &-text {
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+    }
   }
 
   &--inactive {
