--- a/lib/styles/components/node.scss
+++ b/lib/styles/components/node.scss
@@ -2,13 +2,15 @@
   cursor: pointer;
   position: relative;
   margin: 0;
-  width: 150px;
-  height: 150px;
+  font-size: 150px;
+  width: 1em;
+  height: 1em;
   filter: drop-shadow(0 4px 0 transparentize(palette('dark-background'), .25));
 
   &__node {
     width: 100%;
     height: 100%;
+    position: absolute;
   }
 
   &__node-base {
