--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -52,6 +52,29 @@
       justify-content: center;
       align-items: center;
       flex-wrap: nowrap;
+      text-align: center;
+      font-size: 0.1em;
+      &.len-1 {
+        font-size:0.35em;
+      }
+      &.len-2 {
+        font-size:0.25em;
+      }
+      &.len-3 {
+        font-size:0.22em;
+      }
+      &.len-4 {
+        font-size:0.2em;
+      }
+      &.len-5 {
+        font-size:0.15em;
+      }
+      &.len-6 {
+        font-size:0.125em;
+      }
+      &.len-7 {
+        font-size:0.12em;
+      }
     }
   }
 
