--- a/src/styles/global/core/_color-dictionary.scss
+++ b/src/styles/global/core/_color-dictionary.scss
@@ -53,6 +53,24 @@
 @include palette-set('divider', color('platinum--dark'));
 @include palette-set('node-base', color('neon-coral'));
 @include palette-set('node-dark', color('neon-coral--dark'));
+@include palette-set('node-alt-1', color('purple-pizazz'));
+@include palette-set('node-alt-1--dark', color('purple-pizazz--dark'));
+@include palette-set('node-alt-2', color('paradise-pink'));
+@include palette-set('node-alt-2--dark', color('paradise-pink--dark'));
+@include palette-set('node-alt-3', color('barbie-pink'));
+@include palette-set('node-alt-3--dark', color('barbie-pink--dark'));
+@include palette-set('node-alt-4', color('tomato'));
+@include palette-set('node-alt-4--dark', color('tomato--dark'));
+@include palette-set('node-alt-5', color('neon-carrot'));
+@include palette-set('node-alt-5--dark', color('neon-carrot--dark'));
+@include palette-set('node-alt-6', color('mustard'));
+@include palette-set('node-alt-6--dark', color('mustard--dark'));
+@include palette-set('node-alt-7', color('kiwi'));
+@include palette-set('node-alt-7--dark', color('kiwi--dark'));
+@include palette-set('node-alt-8', color('sea-serpent'));
+@include palette-set('node-alt-8--dark', color('sea-serpent--dark'));
+@include palette-set('node-alt-9', color('cerulean-blue'));
+@include palette-set('node-alt-9--dark', color('cerulean-blue--dark'));
 @include palette-set('edge-base', color('mustard'));
 @include palette-set('edge-dark', color('mustard--dark'));
 @include palette-set('edge-alt-1', color('purple-pizazz'));
