--- a/lib/styles/global/core/_color.scss
+++ b/lib/styles/global/core/_color.scss
@@ -12,7 +12,7 @@ $-color-alpha-map: (.1, .15, .3, .6, .7, .8, 1) !default;
 @function color($color-name, $alpha: 1) {
   $color: #fff;
   @if index($-color-alpha-map, $alpha) == null {
-    @warn 'color: Only use #{$-color-map-alpha} for alpha values.';
+    @warn 'color: Only use #{$-color-alpha-map} for alpha values.';
   }
   @if map-has-key($-color-map, $color-name) {
     $color: map-get($-color-map, $color-name);
