allow SVG to overflow

--- a/lib/styles/global/core/_normalize.scss
+++ b/lib/styles/global/core/_normalize.scss
@@ -255,9 +255,9 @@
     border-style: none; // Remove the border on images inside links in IE 10-.
   }
 
-  svg:not(:root) {
-    overflow: hidden; // Hide the overflow in IE
-  }
+  // svg:not(:root) {
+  //   overflow: hidden; // Hide the overflow in IE
+  // }
 
 
   // Avoid 300ms click delay on touch devices that support the `touch-action` CSS property.
