add animation scale factor for javascript animations

--- a/src/styles/global/core/_animation.scss
+++ b/src/styles/global/core/_animation.scss
@@ -1,3 +1,5 @@
+// NOTE: These values should be manually synchronized with ./src/components/animation.js!
+
 // Scale factor
 $animation-default-scale-factor: 1;
 
