refine spinner component

--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -89,6 +89,8 @@ $app-content-padding: 70px;
   display: flex;
   overflow: hidden;
   position: relative;
+  color: palette('text');
+  background: palette('background');
 
   &__content {
     position: absolute;
