--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -1,9 +1,13 @@
+:root {
+  --node-base-size: 200px;
+}
+
 .node {
   cursor: pointer;
   position: relative;
   overflow:visible;
   margin: 0;
-  font-size: 150px;
+  font-size: var(--node-base-size);
   width: 1em;
   height: 1em;
   filter: drop-shadow(0 4px 0 transparentize(palette('dark-background'), .25));
