--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -1,5 +1,8 @@
 :root {
-  --node-base-size: 200px;
+  --node-base-size: 160px;
+  @include breakpoint('full') {
+    --node-base-size: 200px;
+  }
 }
 
 .node {
@@ -8,6 +11,7 @@
   overflow:visible;
   margin: 0;
   font-size: var(--node-base-size);
+
   width: 1em;
   height: 1em;
   filter: drop-shadow(0 4px 0 transparentize(palette('dark-background'), .25));
