adjust heading margin and implement better small button styles

--- a/src/styles/global/core/_normalize.scss
+++ b/src/styles/global/core/_normalize.scss
@@ -50,7 +50,7 @@
   // margin for easier control within type scales as it avoids margin collapsing.
   h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
-    margin-bottom: .5rem;
+    // margin-bottom: .5rem;
   }
 
   // Reset margins on paragraphs
