--- a/lib/styles/components/button.scss
+++ b/lib/styles/components/button.scss
@@ -48,8 +48,12 @@
     &--small {
       min-width: inherit;
       min-height: inherit;
-      padding: 2em 4em;
-      @include typography('copy-small');
+      padding: 2em 0;
+      font-size: 12px;
+
+      > .button__content {
+        margin: 0 2rem;
+      }
     }
 
     &__content {
