--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -104,7 +104,18 @@
     }
   }
 
-  &--placeholder {
-    opacity: .25;
+  &--linking {
+    .node__node-trim {
+      stroke: palette('selected');
+
+    }
+
+    .node__node-outer-trim {
+      stroke: transparentize(palette('selected'), .75);
+      animation: linking $animation-slow-duration ease-in-out infinite;
+
+    }
+    animation: linking $animation-slow-duration ease-in-out infinite;
+
   }
 }
