Moving color dictionary out to default settings and root pseudo selector.

--- a/lib/styles/global/_default.scss
+++ b/lib/styles/global/_default.scss
@@ -184,3 +184,16 @@ $text-sizes: (
     @include text($text-size-name);
   }
 }
+
+// Default Color Settings
+// =============================================================================
+:root {
+  // each item in color map
+  @each $name, $color in $-color-map {
+    --color-#{$name}: $color;
+  }
+}
+
+#root {
+  background-color: var(--color-nc-coral);
+}
