Removing color dictionary and exporting variables from scss file.

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -35,12 +35,12 @@
 
     border-radius: 40px;
     box-shadow: 0 3px rgba(0,0,0,0.25);
-    background-color: color('sea-green');
+    background-color: var(--color-sea-green);
 
     &:hover {
       text-decoration: none;
       cursor: pointer;
-      background-color: color('sea-green', 0.8);
+      opacity: 0.8;
     }
 
     @include color-modifiers($include-hover: true);
