--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -35,7 +35,7 @@
 
     border-radius: 40px;
     box-shadow: 0 3px rgba(0,0,0,0.25);
-    background-color: var(--color-sea-green);
+    background-color: color('sea-green');
 
     &:hover {
       text-decoration: none;
