--- a/src/styles/global/_default.scss
+++ b/src/styles/global/_default.scss
@@ -186,37 +186,37 @@ $text-sizes: (
 
 // Default Color Settings
 // =============================================================================
-@include color-set('neon-coral', #e2215b);
-@include color-set('neon-coral--dark', #ce1c54);
-@include color-set('mustard', #f2b700);
-@include color-set('mustard--dark', #dba500);
-@include color-set('sea-green', #00c9a2);
-@include color-set('sea-green--dark', #00a081);
-@include color-set('white', #fff);
-@include color-set('slate-blue', #6b72ec);
-@include color-set('slate-blue--dark', #555bbc);
-@include color-set('navy-taupe', #2d2955);
-@include color-set('cyber-grape', #3a3a75);
-@include color-set('rich-black', #16152b);
-@include color-set('charcoal', #6d6f76);
-@include color-set('platinum', #f2f6f7);
-@include color-set('platinum--dark', #dae3e5);
-@include color-set('sea-serpent', #0fb2e2);
-@include color-set('sea-serpent--dark', #0fa3ce);
-@include color-set('purple-pizazz', #d30fef);
-@include color-set('purple-pizazz--dark', #bf0cd8);
-@include color-set('paradise-pink', #ff3a8c);
-@include color-set('paradise-pink--dark', #e8357c);
-@include color-set('cerulean-blue', #0f70ff);
-@include color-set('cerulean-blue--dark', #0f66e8);
-@include color-set('kiwi', #70bf54);
-@include color-set('kiwi--dark', #66ad4c);
-@include color-set('neon-carrot', #f7891e);
-@include color-set('neon-carrot--dark', #e07c1c);
-@include color-set('barbie-pink', #ed008c);
-@include color-set('barbie-pink--dark', #d6007f);
-@include color-set('tomato', #e82d3f);
-@include color-set('tomato--dark', #d32b3a);
+@include color-set('neon-coral', rgb(226, 33, 91));
+@include color-set('neon-coral--dark', rgb(206, 28, 84));
+@include color-set('mustard', rgb(242, 183, 0));
+@include color-set('mustard--dark', rgb(219, 165, 0));
+@include color-set('sea-green', rgb(0, 201, 162));
+@include color-set('sea-green--dark', rgb(0, 160, 129));
+@include color-set('white', rgb(255, 255, 255));
+@include color-set('slate-blue', rgb(107, 114, 236));
+@include color-set('slate-blue--dark', rgb(85, 91, 188));
+@include color-set('navy-taupe', rgb(45, 41, 85));
+@include color-set('cyber-grape', rgb(58, 58, 117));
+@include color-set('rich-black', rgb(22, 21, 43));
+@include color-set('charcoal', rgb(109, 111, 118));
+@include color-set('platinum', rgb(242, 246, 247));
+@include color-set('platinum--dark', rgb(218, 227, 229));
+@include color-set('sea-serpent', rgb(15, 178, 226));
+@include color-set('sea-serpent--dark', rgb(15, 163, 206));
+@include color-set('purple-pizazz', rgb(211, 15, 239));
+@include color-set('purple-pizazz--dark', rgb(191, 12, 216));
+@include color-set('paradise-pink', rgb(255, 58, 140));
+@include color-set('paradise-pink--dark', rgb(232, 53, 124));
+@include color-set('cerulean-blue', rgb(15, 112, 255));
+@include color-set('cerulean-blue--dark', rgb(15, 102, 232));
+@include color-set('kiwi', rgb(112, 191, 84));
+@include color-set('kiwi--dark', rgb(102, 173, 76));
+@include color-set('neon-carrot', rgb(247, 137, 30));
+@include color-set('neon-carrot--dark', rgb(224, 124, 28));
+@include color-set('barbie-pink', rgb(237, 0, 140));
+@include color-set('barbie-pink--dark', rgb(214, 0, 127));
+@include color-set('tomato', rgb(232, 45, 63));
+@include color-set('tomato--dark', rgb(211, 43, 58));
 
 @include palette-set('primary', color('sea-green'));
 @include palette-set('menu', color('white'));
@@ -284,6 +284,15 @@ $text-sizes: (
   @each $name, $palette in $-palette-map {
     --#{$name}: $palette;
   }
+
+  // additional palette values
+  --narrative-heading-color: transparentize(rgb(255, 255, 255), 0.3);
+  --narrative-heading-bg-hover : transparentize(rgb(22, 21, 43), 0.85);
+  --narrative-border-bottom-color: transparentize(rgb(22, 21, 43), 0.85);
+
+  --node-outer-trim-stroke: transparentize(rgb(255, 255, 255), .75);
+  --node-filter-shadow: transparentize(rgb(22, 21, 43), .25);
+  --node-filter-shadow: green;
 }
 
 // to export out into css modules for js
