--- a/src/styles/global/_default.scss
+++ b/src/styles/global/_default.scss
@@ -291,8 +291,15 @@ $text-sizes: (
   --narrative-border-bottom-color: transparentize(rgb(22, 21, 43), 0.85);
 
   --node-outer-trim-stroke: transparentize(rgb(255, 255, 255), .75);
-  --node-filter-shadow: transparentize(rgb(22, 21, 43), .25);
-  --node-filter-shadow: green;
+  --node-bucket-bg: radial-gradient( ellipse at center, transparentize(rgb(45, 41, 85), .5) 0%, transparentize(rgb(58, 58, 117), .5) 100%);
+  --node-list-action-bg: transparentize(rgb(58, 58, 117), .5);
+
+  --drop-shadow-color: transparentize(rgb(22, 21, 43), .25);
+
+  --modal-overlay-bg-color: transparentize(rgb(22, 21, 43), .05);
+  --modal-window-box-shadow: transparentize(rgb(22, 21, 43), .25);
+
+  --panel-selected-node-bg-color: transparentize(rgb(255, 255, 255), .95);
 }
 
 // to export out into css modules for js
