--- a/lib/styles/components/node.scss
+++ b/lib/styles/components/node.scss
@@ -25,7 +25,7 @@
   font-size: var(--node-base-size);
   width: 1em;
   height: 1em;
-  filter: drop-shadow(0 4px 0 var(--node-filter-shadow));
+  filter: drop-shadow(0 4px 0 var(--drop-shadow-color));
 
   &__node {
     width: 100%;
