Adds inline property to toggle component.

--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -340,6 +340,16 @@
         cursor: pointer;
         margin: 0;
       }
+
+      &--inline {
+        .#{$toggle-class}__slider {
+          display: inline-block;
+          margin: .5em 1.5em 0 1em;
+        }
+        .input__label-wrapper {
+          display: inline;
+        }
+      }
     }
 
     &__slider {
