--- a/src/styles/global/core/_animation.scss
+++ b/src/styles/global/core/_animation.scss
@@ -1,14 +1,19 @@
 
 $animation-default-scale-factor: 1;
+$animation-default-scale-factor-ms: 1000;
 $animation-easing-ios: cubic-bezier(.23, 1, .32, 1);
 $animation-easing-android: cubic-bezier(.4, 0, .2, 1);
 
 :root {
   --animation-scale-factor: $animation-default-scale-factor;
-  --animation-duration-fast: calc(var(--animation-scale-factor) * 0.3);
-  --animation-duration-standard: calc(var(--animation-scale-factor) * 0.5);
-  --animation-duration-slow: calc(var(--animation-scale-factor) * 1s);
+  --animation-duration-fast: $animation-default-scale-factor * .3s;
+  --animation-duration-fast-ms: $animation-default-scale-factor-ms * .3;
+  --animation-duration-standard: $animation-default-scale-factor * .5s;
+  --animation-duration-standard-ms: $animation-default-scale-factor-ms * .5;
+  --animation-duration-slow: $animation-default-scale-factor * 1s;
+  --animation-duration-slow-ms: $animation-default-scale-factor-ms * 1;
   --animation-easing: $animation-easing-android;
+  --animation-easing-js: [0.4, 0, 0.2, 1];
 }
 
 // Preset animations **********************************************************/
@@ -26,20 +31,23 @@ $animation-easing-android: cubic-bezier(.4, 0, .2, 1);
 
 @keyframes bounce {
   0% {
-    transform:scale(0);
-    opacity:0;
+    transform: scale(0);
+    opacity: 0;
   }
+
   50% {
-    transform:scale(1.1);
-    opacity:0.4;
+    transform: scale(1.1);
+    opacity: .4;
   }
+
   75% {
-    transform:scale(0.9);
-    opacity:0.7;
+    transform: scale(.9);
+    opacity: .7;
   }
+
   100% {
-    transform:scale(1);
-    opacity:1;
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
